# sktech_ml_homeworks_2026

./: README.md  STUDENT_README.md  pyproject.toml
hw1_regression/: generate_test_data.py  grade_hw1.py  hw1_regression.ipynb  hw1_regression_solutions.ipynb  regression_helpers.py  regression_tests.py
hw1_regression/test_data/: classification.npz  collinear.npz  nonlinear.npz  perfect_fit.npz  sparse.npz  well_conditioned.npz
hw2_trees/: generate_test_data.py  grade_hw2.py  hw2_trees.ipynb  hw2_trees_solutions.ipynb  trees_helpers.py  trees_tests.py
hw2_trees/test_data/: binary_classification.npz  complex_classification.npz  multiclass_classification.npz
hw3_deep_learning/: dl_helpers.py  dl_tests.py  generate_test_data.py  grade_hw3.py  hw3_deep_learning.ipynb  hw3_deep_learning_solutions.ipynb
hw3_deep_learning/test_data/: attention_reference.npz  mlp_reference.npz  spirals.npz  tiny_shakespeare.npz
hw4_dimred/: dimred_helpers.py  dimred_tests.py  generate_test_data.py  grade_hw4.py  hw4_dimred.ipynb  hw4_dimred_solutions.ipynb
hw4_dimred/test_data/: high_dim_blobs.npz  pca_reference.npz  swiss_roll.npz
